--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </section>
 
   <!-- Gameplay Embeds -->
-  <section class="py-16 px-6 bg-gray-800">
+  <section class="py-16 px-6 bg-gradient-to-b from-gray-900 to-gray-800">
     <h2 class="text-3xl font-bold mb-8 text-center">Gameplay Highlights</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-5xl mx-auto">
       <!-- Responsive YouTube Embed -->
@@ -87,7 +87,7 @@
   </section>
 
   <!-- Community Links -->
-  <section class="py-16 px-6 text-center">
+  <section class="py-16 px-6 bg-gradient-to-b from-gray-800 to-gray-900 text-center">
     <h2 class="text-3xl font-bold mb-6">Connect With Us</h2>
     <div class="flex justify-center gap-6">
       <a href="https://discord.com/invite/p3ARRrZkhz" target="_blank"
@@ -102,7 +102,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="py-8 text-center bg-gray-950 text-gray-400 text-sm">
+  <footer class="py-8 text-center bg-gray-1000 text-gray-400 text-sm">
     © <script>document.write(new Date().getFullYear())</script> Joint Command. All rights reserved.
   </footer>
 
